GH-8045: Styling: Fix overlapping

--- a/projects/storefrontstyles/scss/components/cart/_cart-item.scss
+++ b/projects/storefrontstyles/scss/components/cart/_cart-item.scss
@@ -44,11 +44,24 @@
       .cx-configuration-info-label {
         @include type('8');
         width: 33%;
+        @include media-breakpoint-up(md) {
+          width: 50%;
+        }
+        @include media-breakpoint-up(xl) {
+          width: 33%;
+        }
       }
+
       .cx-configuration-info-value {
         @include type('7');
         width: 66%;
-        padding-left: 1rem;
+        @include media-breakpoint-up(md) {
+          width: 50%;
+        }
+        @include media-breakpoint-up(xl) {
+          width: 66%;
+        }
+        padding-left: 1.25rem;
       }
     }
   }
